# pdc-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  run-mcp.sh
skills/: pdc.md
src/pdc_mcp/: __init__.py  client.py  server.py
src/pdc_mcp/tools/: __init__.py  contributions.py  enforcement.py  expenditures.py  ind_expenditures.py  lobbyists.py  summaries.py
